--- a/index3.html
+++ b/index3.html
@@ -4,26 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230901114046"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230901114046"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230901114046"></script>
-  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230901114046"></script>
-  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230901114046"></script>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230902005744"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230902005744"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230902005744"></script>
+  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230902005744"></script>
+  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230902005744"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230901114046"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230902005744"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
-  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300;600;700&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230901114046"
+  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300;600;700&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230902005744"
   rel="stylesheet">
 
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230901114046">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230902005744">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230901114046"></link>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230902005744"></link>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230901114046" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230902005744" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
   
   <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -82,8 +82,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230901114046" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230901114046"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230902005744" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230902005744"></script> -->
 <body style="background-color: rgb(28, 28, 28)">
     <main id="swup" class="transition-fade">
       <div id="page" class="pagework page3" data-scroll-container>
@@ -319,7 +319,7 @@
                           <div class="col-4 img_as">
                             <h2>Tasks</h2>
                           </div>
-                          <div class="col-8 img_as">
+                          <div class="col-8 img_as mob_on">
                             <ol>
                               <li>
                                 Improve User Experience (UX):
@@ -510,20 +510,20 @@
                   </div>
                 </div>
                 <div class="row text_plus">
-                  <div class="col-6">
+                  <div class="col-6 mob_on">
                     <h3>- User-friendly interface: The web design for our online cinema is designed with ease-of-use in mind. Our interface is
                     intuitive and simple, allowing users to easily navigate the site and find the movies they want to watch.</h3>
                   </div>
-                  <div class="col-6">
+                  <div class="col-6 mob_on">
                     <h3>- Seamless browsing experience: We understand that users want to spend less time searching for movies and more time
                     watching them. Our web design ensures a seamless browsing experience, with quick-loading pages and easy access to our
                     movie catalog.</h3><br>
                   </div>
-                  <div class="col-6">
+                  <div class="col-6 mob_on">
                     <h3>- Mobile responsive design: With more and more people accessing websites on their mobile devices, our web design is mobile
                     responsive, ensuring that users can easily access our site on any device.</h3>
                   </div>
-                  <div class="col-6">
+                  <div class="col-6 mob_on">
                     <h3>- Personalized recommendations: Our web design includes a personalized recommendation system that suggests movies based on
                     users' viewing history and preferences. This makes it easier for users to find movies that they will love.</h3><br>
                   </div>
@@ -685,8 +685,8 @@
 
 
 
-  <!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230901114046"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230901114046"></script> -->
+  <!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230902005744"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230902005744"></script> -->
 
 
 
@@ -697,16 +697,16 @@
 
 
 
-<script src="files/script /swup.js?_v=20230901114046"></script>
-<script src="files/script /fast-image-zoom.js?_v=20230901114046"></script>
+<script src="files/script /swup.js?_v=20230902005744"></script>
+<script src="files/script /fast-image-zoom.js?_v=20230902005744"></script>
 
-<script src="files/script /tilt.js?_v=20230901114046"></script>
-<script type="module" src="files/script /script.js?_v=20230901114046"></script>
+<script src="files/script /tilt.js?_v=20230902005744"></script>
+<script type="module" src="files/script /script.js?_v=20230902005744"></script>
 
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230901114046"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230902005744"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
