--- a/index9.html
+++ b/index9.html
@@ -4,26 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230902005744"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230902005744"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230902005744"></script>
-  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230902005744"></script>
-  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230902005744"></script>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230902032425"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230902032425"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230902032425"></script>
+  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230902032425"></script>
+  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230902032425"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230902005744"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230902032425"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
-  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300;600;700&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230902005744"
+  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300;600;700&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230902032425"
   rel="stylesheet">
 
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230902005744">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230902032425">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230902005744"></link>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230902032425"></link>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230902005744" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230902032425" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
   
   <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -82,8 +82,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230902005744" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230902005744"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230902032425" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230902032425"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   
@@ -289,7 +289,7 @@
               <div class="col-4">
                 <h2>TASKS</h2>
               </div>
-              <div class="col-8 info">
+              <div class="col-8 info mob_on_full">
                 <ol>
                   <li>
                     Enhance User Experience (UX):
@@ -336,7 +336,7 @@
                 <h2>Target audience ></h2>
               </div>
               <div class="col-2"></div>
-              <div class="col-6">
+              <div class="col-6 mob_on_full">
                 <p>The target audience for Model Kiev consists of individuals seeking exceptional model selection services. This
                   demographic encompasses fashion enthusiasts, brand managers, and event organizers who are tech-savvy and aged
                   25-55.
@@ -426,8 +426,12 @@
                 <h2>User Flow</h2>
               </div>
               <div class="justify-content-center d-flex">
-                <div class="col-9">
-                  <picture><source srcset="img/fybrid_user-flow.webp" type="image/webp"><img src="img/fybrid_user-flow.jpg" alt=""></picture>
+                <div class="col-9 mob_on_full" id="gallery-img">
+                  <picture><source srcset="img/fybrid_user-flow.webp" type="image/webp"><img src="img/fybrid_user-flow.jpg" class="des_off" alt=""></picture>
+                  <a href="img/fybrid_user-flow.jpg" data-pswp-width="1784" data-pswp-height="984" target="_blank"
+                    class="mobs_off">
+                    <picture><source srcset="img/fybrid_user-flow.webp" type="image/webp"><img width="100%" class="mobile-carusel-item-img" src="img/fybrid_user-flow.jpg" alt=''></picture>
+                  </a>
                 </div>
               </div>
             </div>
@@ -441,7 +445,7 @@
         </div>
         <div class="page_model container">
           <div class="row justify-content-center">
-            <div class="col-8">
+            <div class="col-8 mob_on_full">
               <picture><source srcset="img/Fybrid_ver.webp" type="image/webp"><img width="100%" src="img/Fybrid_ver.jpg" alt=""></picture>
             </div>
           </div>
@@ -484,7 +488,7 @@
                 <path d="M13.9393 20.0607C14.5251 20.6464 15.4749 20.6464 16.0607 20.0607L25.6066 10.5147C26.1924 9.92893 26.1924 8.97918 25.6066 8.3934C25.0208 7.80761 24.0711 7.80761 23.4853 8.3934L15 16.8787L6.51472 8.3934C5.92893 7.80761 4.97918 7.80761 4.3934 8.3934C3.80761 8.97918 3.80761 9.92893 4.3934 10.5147L13.9393 20.0607ZM13.5 17V19H16.5V17H13.5Z" fill="#388739"/>
                 </svg>
               </div>
-              <div class="col-9">
+              <div class="col-9 mob_on_full">
                 <picture><source srcset="img/fybrid_next_con.webp" type="image/webp"><img width="100%" src="img/fybrid_next_con.jpg" alt=""></picture>
               </div>
             </div>
@@ -613,8 +617,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230902005744"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230902005744"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230902032425"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230902032425"></script> -->
 
 
 
@@ -625,16 +629,16 @@
 
 
 
-<script src="files/script /swup.js?_v=20230902005744"></script>
-<script src="files/script /fast-image-zoom.js?_v=20230902005744"></script>
+<script src="files/script /swup.js?_v=20230902032425"></script>
+<script src="files/script /fast-image-zoom.js?_v=20230902032425"></script>
 
-<script src="files/script /tilt.js?_v=20230902005744"></script>
-<script type="module" src="files/script /script.js?_v=20230902005744"></script>
+<script src="files/script /tilt.js?_v=20230902032425"></script>
+<script type="module" src="files/script /script.js?_v=20230902032425"></script>
 
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230902005744"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230902032425"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
