--- a/index4.html
+++ b/index4.html
@@ -4,26 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230902032425"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230902032425"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230902032425"></script>
-  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230902032425"></script>
-  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230902032425"></script>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230904221153"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230904221153"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230904221153"></script>
+  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230904221153"></script>
+  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230904221153"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230902032425"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230904221153"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
-  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300;600;700&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230902032425"
+  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300;600;700&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230904221153"
   rel="stylesheet">
 
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230902032425">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230904221153">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230902032425"></link>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230904221153"></link>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230902032425" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230904221153" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
   
   <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -82,8 +82,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230902032425" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230902032425"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230904221153" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230904221153"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   <main id="swup" class="transition-fade">
@@ -276,39 +276,39 @@
               <ol>
                 <li>
                   Improve User Experience (UX):
-                  <ul>
-                    <li>Make navigation more intuitive and user-friendly, allowing users to find information quickly.</li>
-                    <li>Optimize interaction with website elements to enhance usability and reduce the likelihood of errors.</li>
+                  <ul><br>
+                    <li>Make navigation more intuitive and user-friendly, allowing users to find information quickly.</li><br>
+                    <li>Optimize interaction with website elements to enhance usability and reduce the likelihood of errors.</li><br>
                     <li>Ensure fast page loading and smooth interface performance to increase user satisfaction.</li>
                   </ul>
-                </li>
+                </li><br>
                 <li>
                   Create an Attractive and Modern User Interface (UI):
-                  <ul>
-                    <li>Develop a stylish and aesthetically appealing website design that aligns with the premium Aston Martin brand.</li>
+                  <ul><br>
+                    <li>Develop a stylish and aesthetically appealing website design that aligns with the premium Aston Martin brand.</li><br>
                     <li>Utilize modern design trends and elements to create a unique and memorable website appearance.</li>
                   </ul>
-                </li>
+                </li><br>
                 <li>
                   Increase Conversion:
-                  <ul>
+                  <ul><br>
                     <li>Optimize page layouts based on conversion design principles to maximize successful user actions (e.g., orders,
-                    inquiries, subscriptions).</li>
+                    inquiries, subscriptions).</li><br>
                     <li>Strengthen visual elements that attract attention and encourage users to take desired actions.</li>
                   </ul>
-                </li>
+                </li><br>
                 <li>
                   Maintain Brand Identity:
-                  <ul>
+                  <ul><br>
                     <li>ncorporate corporate colors, logo, and branding elements of Aston Martin to establish a consistent and unified brand
-                    perception on the website.</li>
+                    perception on the website.</li><br>
                     <li>Highlight the premium characteristics of the brand and communicate its values through design and visual effects.</li>
                   </ul>
                 </li>
               </ol>
             </div>
           </div>
-          <picture><source srcset="img/task_back.webp" type="image/webp"><img src="img/task_back.jpg" alt=""></picture>
+          <picture><source srcset="img/task_back.webp" type="image/webp"><img class="mob_off" src="img/task_back.jpg" alt=""></picture>
         </div>
         <div class="black_box">
           <div class="target_audience container">
@@ -627,22 +627,22 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230902032425"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230902032425"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230904221153"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230904221153"></script> -->
 
 
 
 
 
-<script src="files/script /swup.js?_v=20230902032425"></script>
-<script src="files/script /fast-image-zoom.js?_v=20230902032425"></script>
+<script src="files/script /swup.js?_v=20230904221153"></script>
+<script src="files/script /fast-image-zoom.js?_v=20230904221153"></script>
 
-<script src="files/script /tilt.js?_v=20230902032425"></script>
-<script type="module" src="files/script /script.js?_v=20230902032425"></script>
+<script src="files/script /tilt.js?_v=20230904221153"></script>
+<script type="module" src="files/script /script.js?_v=20230904221153"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230902032425"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230904221153"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
